--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
+build
+bin
+dist
+Testing
+
+#Protocol buffer generated files
+*.proto
+*.pb*
+
 # Compiled Object files
 *.slo
 *.lo
 *.o
 *.obj
+*.hne
 
 # Precompiled Headers
 *.gch
@@ -26,3 +36,5 @@
 *.exe
 *.out
 *.app
+
+examples/pseudopod-wifi/wifi-credentials.h
